myot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myot-nginx
  labels:
    app: myot-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myot-nginx
  template:
    metadata:
      labels:
        app: myot-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myot-nginx
spec:
  selector:
    app: myot-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
