ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myot-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myot-nginx
                port:
                  number: 80
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: pod-chat
                port:
                  number: 80
